--- a/index.html
+++ b/index.html
@@ -9,16 +9,15 @@
 		<h1>Painture's artworks showcase (this "website" is just a test don't mind it lol)</h1>
 		<h2>Hi! I'm a french digital and traditional artist and you can call me Painture!</h2>
 		<h3>On this page you can view my portfolio and commission showcases :)</h3>
-		<img src= "file:///C:/Users/ahumb/OneDrive/Documents/GitHub/painture/images/IMG_4360.jpg" width="670" height="500" alt="cameliia">
+		<img src= "IMG_4360.jpg" width="670" height="500" alt="cameliia">
 		<p><b>I made this drawing using Procreate, it took me around 3 hours and was commissioned by a Vtuber!<b></p>
 			<h2><br>You can commission me too here :  <a href="https://artistree.io/painture">https://artistree.io/painture</a></br></h2>
 		<p>Artworks gallery :</p>
-		<img src="file:///C:/Users/ahumb/Downloads/IMG_4571.JPG" width="500" height="650" alt="tea time">
+		<img src="IMG_4571.JPG" width="500" height="650" alt="tea time">
 		<img src="https://images.artfight.net/attack/meI3QXYmQtQehWoNQXW7FqnP1K4pvrtLC50jdoRkj5Yd3ROMZXD2jhPnUonJ.png?t=1751580190" width="500" height="650" alt="tea time">
 		
-		<img src="file:///C:/Users/ahumb/Downloads/IMG_4108%20(1).JPG" width="550" height="500" alt="tea time">
-		<img src="file:///C:/Users/ahumb/OneDrive/Documents/monsite/images/a%20(1).PNG" width="600" height="500" alt="tea time">
+		<img src="IMG_4108%20(1).JPG" width="550" height="500" alt="tea time">
+		<img src="images/a(1).PNG" width="600" height="500" alt="tea time">
 
-		
-	</body>
+	<script type="text/javascript" src="app.js"></script>	</body>
 </html>
