--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<img src="https://images.artfight.net/attack/meI3QXYmQtQehWoNQXW7FqnP1K4pvrtLC50jdoRkj5Yd3ROMZXD2jhPnUonJ.png?t=1751580190" width="500" height="650" alt="tea time">
 		
 		<img src="IMG_4108%20(1).JPG" width="550" height="500" alt="tea time">
-		<img src="images/a(1).PNG" width="600" height="500" alt="tea time">
+		<img src="teaa.jpg" width="600" height="500" alt="tea time">
 
 	<script type="text/javascript" src="app.js"></script>	</body>
 </html>
