--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 		<img src="IMG_4571.JPG" width="500" height="650" alt="tea time">
 		<img src="https://images.artfight.net/attack/meI3QXYmQtQehWoNQXW7FqnP1K4pvrtLC50jdoRkj5Yd3ROMZXD2jhPnUonJ.png?t=1751580190" width="500" height="650" alt="tea time">
 		
-		<img src="madoka.JPG" width="550" height="500" alt="tea time">
-		<img src="teaa.JPG" width="600" height="500" alt="tea time">
+		<img src="madoka.png" width="550" height="500" alt="madka">
+		<img src="teaa.jpg" width="600" height="500" alt="tea time">
 
 	<script type="text/javascript" src="app.js"></script>	</body>
 </html>
