--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 		<h1>Painture's artworks showcase (this "website" is just a test don't mind it lol)</h1>
 		<h2>Hi! I'm a french digital and traditional artist and you can call me Painture!</h2>
 		<h3>On this page you can view my portfolio and commission showcases :)</h3>
-		<img src= "IMG_4360.jpg" width="670" height="500" alt="cameliia">
+		<img src= "images/IMG_4360.jpg" width="670" height="500" alt="cameliia">
 		<p><b>I made this drawing using Procreate, it took me around 3 hours and was commissioned by a Vtuber!<b></p>
 			<h2><br>You can commission me too here :  <a href="https://artistree.io/painture">https://artistree.io/painture</a></br></h2>
 		<p>Artworks gallery :</p>
-		<img src="teaa.jpg" width="500" height="650" alt="tea time">
+		<img src="images/teaa.jpg" width="500" height="650" alt="tea time">
 		<img src="https://images.artfight.net/attack/meI3QXYmQtQehWoNQXW7FqnP1K4pvrtLC50jdoRkj5Yd3ROMZXD2jhPnUonJ.png?t=1751580190" width="500" height="650" alt="tea time">
 		
-		<img src="madoka.png" width="550" height="500" alt="madka">
-		<img src="teaa.jpg" width="600" height="500" alt="vroid">
+		<img src="images/madoka.png" width="550" height="500" alt="madka">
+		<img src="images/teaa.jpg" width="600" height="500" alt="vroid">
 
 	<script type="text/javascript" src="app.js"></script>	</body>
 </html>
