--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<h1>Painture's artworks showcase (this "website" is just a test don't mind it lol)</h1>
+		<h1 id="title">Painture's artworks showcase (this "website" is just a test don't mind it lol)</h1>
 		<h2>Hi! I'm a french digital and traditional artist and you can call me Painture!</h2>
 		<h3>On this page you can view my portfolio and commission showcases :)</h3>
 		<img src= "images/IMG_4360.jpg" width="670" height="500" alt="cameliia">
