--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<title>painture's summer artworks ₊˚⊹♡</title>
 		<link rel="stylesheet" href="style.css">
+		<link rel="shortcut icon" type="image/x-icon" href="images/ez.jpg">
 	</head>
 	<body>
 		<h1 id="title">Painture's artworks showcase (this "website" is just a test don't mind it lol)</h1>
