--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<img src="images/ez.jpg" width="500" height="500" alt="madka">
 		<img src="images/a(1).PNG" width="600" height="500" alt="vroid">
 		<img src="images/cat2.jpg" width="500" height="700" alt="vroid">
-		<img src="images/cat.jpg" width="500" height="700" alt="vroid">
+		<img src="images/cat.webp" width="500" height="700" alt="cat">
 
 	<script type="text/javascript" src="app.js"></script>	</body>
 </html>
